5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1885_3134.log
== TEST (2019-07-09 10:54:44) 
-- CODE:
from numpy import*

y = array(eval(float(input())))

m=0
i=0
n = size(y)

while y = size(y)
	m = (y[i]**2)
	m = (m/n)**1/2
	i = i + 1
	
print(round(m, n)
-- ERROR:
File "XXXX", line 9
    while y = size(y)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:54:55) 
-- CODE:
from numpy import*

y = array(eval(float(input())))

m=0
i=0
n = size(y)

while y < size(y)
	m = (y[i]**2)
	m = (m/n)**1/2
	i = i + 1
	
print(round(m, n)
-- ERROR:
File "XXXX", line 9
    while y < size(y)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:55:06) 
-- CODE:
from numpy import*

y = array(eval(float(input())))

m=0
i=0
n = size(y)

while y < size(y):
	m = (y[i]**2)
	m = (m/n)**1/2
	i = i + 1
	
print(round(m, n)
-- ERROR:
File "XXXX", line 15
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:55:15) 
-- CODE:
from numpy import*

y = array(eval(float(input())))

m=0
i=0
n = size(y)

while y < size(y):
	m = (y[i]**2)
	m = (m/n)**1/2
	i = i + 1
	
print(round(m, n)
-- ERROR:
File "XXXX", line 15
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:55:22) 
-- CODE:
from numpy import*

y = array(eval(float(input())))

m=0
i=0
n = size(y)

while y < size(y):
	m = (y[i]**2)
	m = (m/n)**1/2
	i = i + 1
	
print(round(m, n)
-- ERROR:
File "XXXX", line 15
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:03:08) 
-- CODE:
from numpy import*

y = array(eval(float(input())))

m=0
i=0
n = size(y)

while y < size(y):
	m = (y[i]**2)
	m = (m/n)**1/2
	i = i + 1
	
print(round(m, n)
-- EXECUTION TIME:
0.838284
-- ERROR:
  File "/home/codebench/codes/1885/3134/main.py", line 15
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:12:14) 
-- CODE:
from numpy import*

y = array(eval(float(input())))

a = 0
n = size(y)

while y < n:

	m = m + y[i]**2 
	m = (m/n)**1/2

print(round(m, n))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:13:14) 
-- CODE:
from numpy import*
from math import8

y = array(eval(float(input())))

a = 0
n = size(y)

while y < n:

	m = m + y[i]**2 
	m = (m/n)**1/2

print(round(m, n))
	
-- ERROR:
File "XXXX", line 2
    from math import8
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:13:23) 
-- CODE:
from numpy import*
from math import*

y = array(eval(float(input())))

a = 0
n = size(y)

while y < n:

	m = m + y[i]**2 
	m = (m/n)**1/2

print(round(m, n))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:13:47) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

a = 0
n = size(y)

while y < n:

	m = m + y[i]**2 
	m = (m/n)**1/2

print(round(m, n))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:14:05) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

a = 0
n = size(y)

while y <= n:

	m = m + y[i]**2 
	m = (m/n)**1/2

print(round(m, n))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:14:24) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

a = 0
n = size(y)

while y > n:

	m = m + y[i]**2 
	m = (m/n)**1/2

print(round(m, n))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:14:54) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))


n = size(y)
i = 0

while y < n:

	m = m + y[i]**2 
	m = (m/n)**1/2

print(round(m, n))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:15:02) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))


n = size(y)
i = 0

while y <= n:

	m = m + y[i]**2 
	m = (m/n)**1/2

print(round(m, n))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:15:13) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))


n = size(y)
i = 0
m = 0
while y <= n:

	m = m + y[i]**2 
	m = (m/n)**1/2

print(round(m, n))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:15:58) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))


n = size(y)
i = 0
m = 0
while size(y)< n:

	m = m + y[i]**2 
	m = (m/n)**1/2

print(round(m, n))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:17:09) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))


n = size(y)
i = 0
m = 0
while size(y)< n:

	m = m + y[i]**2 
	m = (m/n)**1/2
	i = i + 1

print(round(m, n))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:17:29) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))


n = size(y)
i = 0
m = 0
while size(y)< n:

	m = m + y[i]**2 
	m = (m/n)**1/2
	i = i + 1

print(round(m, n))
	
-- EXECUTION TIME:
0.729819
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
5.29
---- user output:
0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
4.28
---- user output:
0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.41
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:22:14) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

m = 0
n = size(y)

for i in range(y):
	m = m + (y[0]**2 + y[1]**2 +y[2]**2 + y[3]**2)
	m = (m/n)**1/2
	
	
print(round(m, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:22:28) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

m = 0
n = size(y)

for i in range(size(y)):
	m = m + (y[0]**2 + y[1]**2 +y[2]**2 + y[3]**2)
	m = (m/n)**1/2
	
	
print(round(m, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:23:00) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

m = 0
n = size(y)

for i in range(size(y)):
	m = (y[0]**2 + y[1]**2 +y[2]**2 + y[3]**2)
	m = (m/n)**1/2
	
	
print(round(m, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:23:34) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

m = 0
n = size(y)

for i in range(size(y)):
	m = ((y[0]**2 + y[1]**2 +y[2]**2 + y[3]**2)/n)**1/2
	
	
	
print(round(m, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:24:38) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

m = 0
n = size(y)


m = ((y[0]**2 + y[1]**2 +y[2]**2 + y[3]**2)/n)**1/2
	
	
	
print(round(m, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:24:55) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

m = 0
n = size(y)


m = ((y[0]**2 + y[1]**2 +y[2]**2 + y[3]**2)/n)
	
	
	
print(round(m, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:26:58) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

m = 0
n = size(y)

if y > 0:
	m = (y[0]**2 + y[1]**2 +y[2]**2 + y[3]**2)/n
	m = (m/n)**1/2
	
print(round(m, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:27:22) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

m = 0
n = size(y)

if size(y) > 0:
	m = (y[0]**2 + y[1]**2 +y[2]**2 + y[3]**2)/n
	m = (m/n)**1/2
	
print(round(m, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:29:49) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

m = 0
n = size(y)

if size(y) > 0:
	m = (y[0]**2 + y[1]**2 +y[2]**2 + y[3]**2+(y[n-1]**2))/n
	m = (m/n)**1/2
	
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:31:13) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

m = 0
n = size(y)

if size(y) > 0:
	m = (y[0]**2 + y[1]**2 +y[2]**2 + y[3]**2+(y[n-1]**2))/n
	m = (m/n)**1/2
	
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:31:44) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

m = 0
n = size(y)

if size(y) > 0:
	m = (y[0]**2 + y[1]**2 +y[2]**2 + y[3]**2)/n
	m = (m/n)**1/2
	
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:32:17) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

m = 0
n = size(y)

if size(y) > 0:
	m = (y[0]**2 + y[1]**2 +y[2]**2 + y[3]**2)/4
	m = (m/n)**1/2
	
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:33:34) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

m = 0
n = size(y)

if size(y) > 0:
	m = (y[0]**2 + y[1]**2 +y[2]**2 + y[3]**2)/n
	m = m**1/2
	
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:37:37) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

m = 0
n = size(y)

for i in range(y):
	m = m + y[i]**2
	m = m/n**12
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:37:53) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

m = 0
n = size(y)

for i in range(size(y)):
	m = m + y[i]**2
	m = m/n**12
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:38:26) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

n = size(y)

for i in range(size(y)):
	m = m + y[i]**2
	m = m/n**12
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:38:35) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

n = size(y)
m = m
for i in range(size(y)):
	m = m + y[i]**2
	m = m/n**12
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:39:09) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

n = size(y)
m=0
for i in range(size(y)):
	m = m + y[i]**2
	m = m/n**12
   print(round(m, 2))
-- ERROR:
File "XXXX", line 11
    print(round(m, 2))
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:40:42) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

n = size(y)
m=0
for i in range(size(y)):
	m = m + y[i]**2
	m = m/n**12
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:41:13) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

n = size(y)
m=0
for i in range(size(y)):
	m = m + y[i]**2
m = (m/n)**1/2
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:43:19) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

n = size(y)

m=0


for i in range(size(y)):	
	m = m + y[i]**2
m = (m/n)**1/2

print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:44:12) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

n = size(y)

m=0


for i in range(size(y)):	
	m = m + y[i]**2
m = (m/n)**(1/2)

print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:44:21) 
-- CODE:
from numpy import*
from math import*

y = array(eval(input()))

n = size(y)

m=0


for i in range(size(y)):	
	m = m + y[i]**2
m = (m/n)**(1/2)

print(round(m, 2))
-- EXECUTION TIME:
1.10334
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
5.29
---- user output:
5.29
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
4.28
---- user output:
4.28
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.41
---- user output:
3.41
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
